# milos_qt

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  INSTALL_INSTRUCTIONS.md  QUICK_INSTALL.md  default.nix  flake.nix  flake_README.md
docs/plans/: 2026-01-02-milos-qt-design.md
nix/: home-manager.nix
nixos-config/: README.md  flake.nix  install.sh
nixos-config/home/: default.nix
nixos-config/hosts/: default.nix  hardware-configuration.nix
qml/: CMakeLists.txt  main.qml  milos.qmlmodule
qml/app/: MilosQtApplication.qml
qml/components/: BatteryWidget.qml  ClockWidget.qml  NeobrutalistButton.qml  NeobrutalistCard.qml  NeobrutalistSlider.qml  NeobrutalistWindow.qml  NetworkWidget.qml  SettingsNavButton.qml  SoundIcon.qml  SoundPopup.qml  SystemMonitorWidget.qml  SystemTray.qml  TopBar.qml  TopBarButton.qml
qml/style/: Colors.qml  Theme.qml
qml/windows/: SettingsWindow.qml
qml/windows/panels/: AboutPanel.qml  AudioPanel.qml  DisplayPanel.qml  ShortcutsPanel.qml  ThemePanel.qml  WallpaperPanel.qml
src/: CMakeLists.txt  main.cpp
src/services/: AudioService.cpp  AudioService.h  MprisService.cpp  MprisService.h  NetworkService.cpp  NetworkService.h  SystemMonitor.cpp  SystemMonitor.h
src/style/: ThemeManager.cpp  ThemeManager.h
tests/: CMakeLists.txt  test_theme.cpp
